Fixed an issue with z-index.

--- a/Documentation-Template/DocumentationFiles/css/default-style/fullScreenLoading.css
+++ b/Documentation-Template/DocumentationFiles/css/default-style/fullScreenLoading.css
@@ -4,7 +4,7 @@
     position: fixed;
     pointer-events: all;
     opacity: 1.0;
-    z-index: 1;
+    z-index: 100;
     transition: 200ms;
 }
 .fullscreenLoadingBg{
