--- a/Documentation-Template/DocumentationFiles/css/default-style/fullscreenImageViewer.css
+++ b/Documentation-Template/DocumentationFiles/css/default-style/fullscreenImageViewer.css
@@ -1,5 +1,5 @@
 .fullscreenImageBackground{
-    z-index: 8;
+    z-index: 800;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -10,7 +10,7 @@
     cursor: zoom-out;
 }
 .fullscreenImagePopupContent{
-    z-index: 10;
+    z-index: 1000;
     position: fixed;
     width: 100%;
     height: 100%;
