--- a/Documentation-Template/DocumentationFiles/css/default-style/readProgress.css
+++ b/Documentation-Template/DocumentationFiles/css/default-style/readProgress.css
@@ -1,5 +1,5 @@
 .readProgressContainer {
-    z-index: 4;
+    z-index: 400;
     position: fixed;
     width: 100%;
     height: 3px;
