--- a/Documentation-Template/DocumentationFiles/css/default-style/topbar.css
+++ b/Documentation-Template/DocumentationFiles/css/default-style/topbar.css
@@ -1,5 +1,5 @@
 .topBar {
-    z-index: 2;
+    z-index: 200;
     width: 100%;
     height: 45px;
     position: fixed;
